# WinToast

./: .gitignore  CMakeLists.txt  LICENSE.txt
example/console-example/: WinToast Console Example.vcxproj  main.cpp
include/: wintoastlib.h
src/: dll_importer.h  internal_date_time.h  macros.h  win_toast_arguments.cpp  win_toast_notification.cpp  win_toast_notification_builder.cpp  win_toast_template.cpp  wintoast.cpp  wintoast_impl.cpp  wintoast_impl.h  wintoast_string_wrapper.h  wintoastlib.cpp  wintoastlib.h  wintoaststringwrapper.h
